--- a/lesson-demo/pom.xml
+++ b/lesson-demo/pom.xml
@@ -17,6 +17,13 @@
             <artifactId>java-fundamentals-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
+
     </dependencies>
+
 
 </project>
